# cpp-transport-catalogue

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: building_linux.yml  building_windows.yml  linux_ci_test.yml  ubuntu.yml
cmake/: CompileOptions.cmake  Docs.cmake
docs/: Doxyfile  json.md
docs/examples/: map_input.json  map_output.json  route_input.json  route_output.json
docs/html/: annotated.html  classDataStorage_1_1StopCoordsIterator-members.html  classDataStorage_1_1StopCoordsIterator.html  classInputReader-members.html  classInputReader.html  classJsonReader-members.html  classJsonReader.html  classMapRenderer-members.html  classMapRenderer.html  classRequestHandler-members.html  classRequestHandler.html  classSphereProjector-members.html  classSphereProjector.html  classStatReader-members.html  classStatReader.html  classTransportCatalogue-members.html  classTransportCatalogue.html  classTransportRouter-members.html  classTransportRouter.html  classTransportRouter_1_1Vertex-members.html  classTransportRouter_1_1Vertex.html  classcore_1_1RequestHandler-members.html  classcore_1_1RequestHandler.html  classcore_1_1TransportCatalogue-members.html  classcore_1_1TransportCatalogue.html  classcore_1_1TransportRouter-members.html  classcore_1_1TransportRouter.html  classcore_1_1Vertex-members.html  classcore_1_1Vertex.html  classcore_1_1data_1_1StopCoordsIterator-members.html  classcore_1_1data_1_1StopCoordsIterator.html  classdata_1_1StopCoordsIterator-members.html  classdata_1_1StopCoordsIterator.html  classdata_1_1Vertex-members.html  classdata_1_1Vertex.html  classes.html  classgraph_1_1DirectedWeightedGraph-members.html  classgraph_1_1DirectedWeightedGraph.html  classgraph_1_1Range-members.html  classgraph_1_1Range.html  (+372 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  files_1.js  (+37 more)
docs/latex/: annotated.tex  classDataStorage_1_1StopCoordsIterator.tex  classInputReader.tex  classJsonReader.tex  classMapRenderer.tex  classRequestHandler.tex  classSphereProjector.tex  classStatReader.tex  classTransportCatalogue.tex  classTransportRouter.tex  classTransportRouter_1_1Vertex.tex  classcore_1_1RequestHandler.tex  classcore_1_1TransportCatalogue.tex  classcore_1_1TransportRouter.tex  classcore_1_1Vertex.tex  classcore_1_1data_1_1StopCoordsIterator.tex  classdata_1_1StopCoordsIterator.tex  classdata_1_1Vertex.tex  classgraph_1_1DirectedWeightedGraph.tex  classgraph_1_1Range.tex  classgraph_1_1Router.tex  classgraphics_1_1MapRenderer.tex  classgraphics_1_1SphereProjector.tex  classgraphics_1_1svg_1_1Circle.eps  classgraphics_1_1svg_1_1Circle.tex  classgraphics_1_1svg_1_1Document.eps  classgraphics_1_1svg_1_1Document.tex  classgraphics_1_1svg_1_1Drawable.tex  classgraphics_1_1svg_1_1Object.eps  classgraphics_1_1svg_1_1Object.tex  classgraphics_1_1svg_1_1ObjectContainer.eps  classgraphics_1_1svg_1_1ObjectContainer.tex  classgraphics_1_1svg_1_1PathProps.tex  classgraphics_1_1svg_1_1Polyline.eps  classgraphics_1_1svg_1_1Polyline.tex  classgraphics_1_1svg_1_1Text.eps  classgraphics_1_1svg_1_1Text.tex  classio_1_1JsonReader.tex  classio_1_1RequestHandler.tex  classio_1_1json_1_1Builder.tex  (+220 more)
proto/: graph.proto  map_renderer.proto  svg.proto  transport_catalogue.proto  transport_router.proto
tests/: 2.json  2a.json  CMakeLists.txt  test.cpp
transport-catalogue/: CMakeLists.txt  domain.cpp  domain.h  generic_parser.h  geo.cpp  geo.h  graph.h  input_reader.cpp  input_reader.h  json.cpp  json.h  json_builder.cpp  json_builder.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  request_handler.cpp  request_handler.h  router.h  serialization.cpp  serialization.h  stat_reader.h  svg.cpp  svg.h  tests.cpp  tests.h  transport_catalogue.cpp  transport_catalogue.h  transport_router.cpp  transport_router.h
