aux_source_directory(./ APP_SOURCES)

protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO_FILES})

add_executable(${EXECUTABLE_NAME} ${PROTO_SRCS} ${PROTO_HDRS} ${APP_SOURCES})

target_include_directories(${EXECUTABLE_NAME}
        PRIVATE ${Protobuf_INCLUDE_DIRS}
        PRIVATE ${CMAKE_CURRENT_BINARY_DIR}
        )
target_link_libraries(${EXECUTABLE_NAME}
        PRIVATE "$<IF:$<CONFIG:Debug>,${Protobuf_LIBRARY_DEBUG},${Protobuf_LIBRARY}>"
        )

add_debug_compiler_options(
        TARGET ${EXECUTABLE_NAME}
        "WARNINGS_AS_ERRORS" ${WARNINGS_AS_ERRORS}
        "SANITIZERS" ${SANITIZERS}
        "SAVE_TEMP_FILES" ${SAVE_TEMP_FILES}
)

set_target_properties(
        ${EXECUTABLE_NAME}
        PROPERTIES
        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

SET(RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin")
SET(RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/lib")
SET(LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/lib")
SET(ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/lib")
SET(ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/lib")
